# the

./: HISTORY  INSTALL  Makefile.in  README  THE-doc.spec  THE.spec  THE_Help.txt  TODO  aclocal.m4  alloca.c  append.the  appendix.1  appendix.2  appendix.3  appendix.4  appendix.7  box.c  build.com  c.tld  cdiff.tld  codecomp.the  colour.c  column.c  comm.the  comm1.c  comm2.c  comm3.c  comm4.c  comm5.c  command.h  commset1.c  commset2.c  commsos.c  commutil.c  complete.the  config.h.in  configure  configure.in  cua.the  cursor.c  (+88 more)
contrib/: utf8.c  utf8.h
debian/: changelog  control  copyright  rules
doc/: THE_Help_head  app5.htm  app6.htm  fdl.htm  preparecomb.the  title.htm
syntax/: rexx.syntax  rexxdw.syntax  rexxeec.syntax  rexxutil.syntax
